Exposed menu accelerator keys to accessibility.

This is a top request from one of our accessibility partners.
R=sky@chromium.org, dmazzoni@chromium.org
TESTED=Manually with Chrome on Windows and the NVDA / Jaws screen readers by browsing the main menu

Bug: 731077
Change-Id: Id1c0fb24827ce0ed012ce0844d63ae6ae31e9ac3
Reviewed-on: https://chromium-review.googlesource.com/629102
Reviewed-by: Nektarios Paisios <nektar@chromium.org>
Reviewed-by: Scott Violet <sky@chromium.org>
Commit-Queue: Nektarios Paisios <nektar@chromium.org>
Cr-Commit-Position: refs/heads/master@{#496782}
Former-commit-id: 0b7e862dfaeab93fd993efe40ec173ce37f41953